made responsive - added SVG circles - added an animation

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
 
-  <!-- <img class="top_circle" src="img/bg-pattern-top.svg" alt="an SVG of the top circle">
-  <img class="bottom_circle" src="img/bg-pattern-bottom.svg" alt="an SVG of the bottom circle"> -->
-
   <main class="wrapper">
+    
+    <img class="svg_circle_top" src="img/bg-pattern-top.svg" alt="an SVG of the top circle">
+    <img class="svg_circle_bottom" src="img/bg-pattern-bottom.svg" alt="an SVG of the bottom circle">
 
     <div class="profile_card">
 
       <!-- PROFILE BACKGROUND -->
       <div class="card_background">
-        <img src="img/bg-pattern-card.svg" alt="an SVG of the card background" class="svg">
+        <img src="img/bg-pattern-card.svg" alt="an SVG of the card background" class="svg_pattern_card">
       </div>
 
       <!-- PROFILE INFORMATION -->
